# nyaacli

./: Cargo.toml  README.md
src/: input.rs  main.rs  nyaa.rs  table.rs  torrent.rs
