[package]
name = "nyaacli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "^0.11"
select = "^0.5"
prettytable-rs = "^0.8"
structopt = "^0.3"
